--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   "dependencies": {
     "eslint": "^3.17.1",
     "eslint-config-supermind": "^0.20.0",
+    "lodash": "^4.17.4",
     "standard-engine": "^6.0.0"
   }
 }
