set eslint dep versions to latest

--- a/package.json
+++ b/package.json
@@ -29,8 +29,8 @@
     "url": "https://github.com/supermind/superlint/issues"
   },
   "dependencies": {
-    "eslint": "^3.17.1",
-    "eslint-config-supermind": "^0.20.0",
+    "eslint": "latest",
+    "eslint-config-supermind": "latest",
     "ramda": "^0.23.0",
     "standard-engine": "^6.0.0"
   }
